Fixed horisontal scrollbar

--- a/theme/src/layout/vgrid.less
+++ b/theme/src/layout/vgrid.less
@@ -15,10 +15,14 @@
     margin-bottom: 12px;
 }
 
-
 /**
 *   Misc Styling
 */
+.inner-wrap-header,
+.inner-wrap-footer {
+    #desinax-vgrid.grid(100%);
+}
+
 .site-logo {
     display: none;
 }
@@ -38,6 +42,8 @@
 }
 
 .inner-wrap {
+    #desinax-vgrid.grid(80%);
+
     // max-width: 80%;
     // margin: auto;
     background-color: #bfc5d8;
@@ -59,7 +65,7 @@
 */
 .outer-wrap.outer-wrap-header {
     background-color: #bfc5d8;
-    .clearfix();
+    // .clearfix();
 }
 
 .inner-wrap.inner-wrap-header {
@@ -155,7 +161,7 @@
 *   Styling For Side-Bars
 */
 .inner-wrap-main {
-    .clearfix();
+    // .clearfix();
 }
 .region-sidebar-right,
 .region-sidebar-left {
